objects/Artifact__c.object
<CustomObject>
    <description>created to track artifacts created or modified for a case</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <inlineHelpText>Some artifacts don&apos;t have a separate API name with underscores; in that case copy the label/name into this field.</inlineHelpText>
        <label>API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This artifact will be deployed via Ant package or Change Set.</description>
        <inlineHelpText>This artifact will be deployed via Ant or Change Set.</inlineHelpText>
        <label>Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This artifact will be manually added or configured directly in target org; may be deployable but then also require additional configuration.</description>
        <inlineHelpText>This artifact will be manually added or configured directly in target org; may be deployable but then also require additional configuration.</inlineHelpText>
        <label>Manual Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The name of the object this artifact is associated with, if applicable</description>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContentVersion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Part Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Model Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyComatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpportunityLineItem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuoteLineItem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Report</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>Purpose, reason, dependencies, picklist or page layout changes, etc.</inlineHelpText>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Button or Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email-to-Case Routing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field - Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Org-Wide Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Artifact</label>
    <nameField>
        <label>Label/Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>